# Optimizacion-de-Portfolios

./: .gitignore  README.md  build.sh  requirements.txt
cpp_extension/: CMakeLists.txt
cpp_extension/src/: posit_wrapper.cpp
experiments/: scaling_battle_16bit.py
posit_lib/: __init__.py  float_wrapper.py  solver.py  statistics.py
posit_lib/adapters/: __init__.py  skfolio_adapter.py
tests/: custom_comparison.py  ill_conditioned_comparison.py  real_asset_comparison.py  test_posit.py
